[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.0-alpha.11"
chrono = "0.4.19"
log = "0.4.17"
simplelog = "0.12.0"
reqwest = { version = "0.11.11", features = ["stream", "json", "rustls-tls"] }
futures-util = "0.3.21"
fltk = { version = "1.3.11", features = ["fltk-bundled"] }
tokio = "1.20.0"
serde_json = "1.0.82"
serde = "1.0.139"
rustls = "0.20.6"
base32 = "0.4.0"
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
url = "2.2.2"
clap = {version="3.2.13",features=["derive"]}
